# pdf-to-jpg-converter

./: .gitignore  README.md  pyproject.toml
.agents/: contracts.md  modules.md  pipeline.md  rules.md  system.md
.agents/changes/: bootstrap-minimal-project-structure.md  pdf-to-jpg-windows-gui-implementation-session.md  pdf-to-jpg-windows-gui.md
.github/: copilot-instructions.md
scripts/: build.ps1
src/pdf_to_jpg_converter/: app.py  converter.py  gui.py
src/pdf_to_jpg_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_converter.py
